# learn-optix

./: .gitignore  CMakeLists.txt  README.md  main.cpp
01-solid-color/: solid_color.cu
02-simple-triangle/: CMakeLists.txt  Data.h  config.h.in  main.cpp  solid_color.cu  triangle.cu
sutil/: CMakeLists.txt  Scene.cpp  sutil.cpp  sutil.h
